<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".detail.search.ui.SearchActivity">

    <LinearLayout
        android:id="@+id/topBar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_back_btn"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/search_left_arrow"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/search_background_iv"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:contentDescription="@string/search_background"
                android:src="@drawable/search_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/searchIcon"
                android:src="@drawable/search_search"
                app:layout_constraintTop_toTopOf="@id/search_background_iv"
                app:layout_constraintBottom_toBottomOf="@id/search_background_iv"
                app:layout_constraintStart_toStartOf="@id/search_background_iv"
                android:layout_marginStart="15dp"/>
            <EditText
                android:id="@+id/search_et"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:maxLength="30"
                android:hint="@string/search"
                android:textSize="17sp"
                android:paddingStart="44dp"
                android:fontFamily="@font/freesentation_4regular"
                android:textColorHint="@color/grey_300"
                android:imeOptions="actionSearch"
                android:letterSpacing="0.016"
                app:layout_constraintTop_toTopOf="@id/search_background_iv"
                app:layout_constraintStart_toEndOf="@id/search_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@null"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_frm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar_ll" />

</androidx.constraintlayout.widget.ConstraintLayout>