<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search_left_arrow"
            android:contentDescription="@string/detail_back_btn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/detail_exhibition_info"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:letterSpacing="0.018"
            android:fontFamily="@font/freesentation_8extrabold"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/top_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="240dp"
                android:layout_height="287dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/detail_image"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="60dp"
                android:contentDescription="@string/detail_image"/>

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/detail_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="기안84 제2회 개인전 : 奇案島(기안도; 기묘한 섬) floating on SEOUL"
                android:textSize="16sp"
                android:fontFamily="@font/freesentation_6semibold"
                android:textColor="@color/black"
                android:lineHeight="18.7sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24.02.15 ~ 24.02.29"
                android:textSize="14sp"
                android:fontFamily="@font/freesentation_4regular"
                android:textColor="@color/black"
                android:lineHeight="16.37sp"
                app:layout_constraintTop_toBottomOf="@id/detail_title"
                app:layout_constraintStart_toStartOf="@id/detail_title"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/record_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/detail_record_btn"
                android:src="@drawable/record_bg"
                app:layout_constraintTop_toBottomOf="@id/date_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_record"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:fontFamily="@font/freesentation_4regular"
                android:lineHeight="17.54sp"
                android:letterSpacing="0.1"
                app:layout_constraintTop_toTopOf="@id/record_btn"
                app:layout_constraintBottom_toBottomOf="@id/record_btn"
                app:layout_constraintStart_toStartOf="@id/record_btn"
                app:layout_constraintEnd_toEndOf="@id/record_btn"/>

            <View
                android:id="@+id/line"
                android:layout_width="310dp"
                android:layout_height="1dp"
                android:background="@color/white_300"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/record_btn"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_notice"
                android:textSize="11sp"
                android:fontFamily="@font/freesentation_4regular"
                android:textColor="@color/black"
                android:lineHeight="12.86sp"
                android:letterSpacing="0.011"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>